# wcsaga

./: .gitattributes  .gitignore  Makefile.am  README.md  compile.sh  configure.ac
code/: Makefile.am
code/ai/: ai.cpp  ai.h  ai_profiles.cpp  ai_profiles.h  aibig.cpp  aibig.h  aicode.cpp  aigoals.cpp  aigoals.h  aiinternal.h  aiturret.cpp
code/anim/: animplay.cpp  animplay.h  packunpack.cpp  packunpack.h
code/asteroid/: asteroid.cpp  asteroid.h
code/autopilot/: autopilot.cpp  autopilot.h
code/bmpman/: bm_internal.h  bmpman.cpp  bmpman.h
code/camera/: camera.cpp  camera.h
code/cfile/: cfile.cpp  cfile.h  cfilearchive.cpp  cfilearchive.h  cfilelist.cpp  cfilesystem.cpp  cfilesystem.h
code/cmdline/: cmdline.cpp  cmdline.h
code/cmeasure/: cmeasure.cpp  cmeasure.h
code/controlconfig/: controlsconfig.cpp  controlsconfig.h  controlsconfigcommon.cpp
code/cryptstring/: cryptstring.cpp
code/cutscene/: OggReader.cpp  OggReader.h  cutscenes.cpp  cutscenes.h  decoder16.cpp  decoder8.cpp  movie.cpp  movie.h  mve_audio.cpp  mvelib.cpp  mvelib.h  mveplayer.cpp  oggplayer.cpp  oggplayer.h
code/ddsutils/: ddsutils.cpp  ddsutils.h
code/debris/: debris.cpp  debris.h
code/debugconsole/: console.cpp  dbugfile.cpp  dbugfile.h  timerbar.cpp  timerbar.h
code/decals/: decals.cpp  decals.h
code/demo/: demo.cpp  demo.h
code/directx/: vasync.h  vd3dtypes.h  vddraw.h  vdinput.h  vdplay.h  vdplobby.h  vdsetup.h  vdsound.h  vdvp.h
code/exceptionhandler/: exceptionhandler.cpp
code/external_dll/: externalcode.h  trackirpublic.h
code/fireball/: fireballs.cpp  (+2 more)
(+815 files in other folders)
